# DoramiSourceArchive

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  daily-news-2026-06-07.json  deploy-docker-legacy.sh  deploy-docker.sh  deploy.sh  docker-compose.legacy-rag.yml  docker-compose.legacy.yml  docker-compose.yml  ecosystem.config.js  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
alembic/: env.py  script.py.mako
config/: backend.example.ini  production.example.ini
docker/: backend.Dockerfile  edge-nginx.conf.example  entrypoint.py  nginx.Dockerfile  nginx.conf  requirements-rag.txt  requirements.txt
docs/: README.md  aihot-source-gap-analysis.md  aihot-source-inventory.md  alibaba_qwen_source_cleanup_handoff.md  archive_sync_contract.md  backlog.md  collector_reader_rearchitecture_plan.md  config_variable_audit.md  configuration.md  deploy-docker.md  dify_delivery.md  engage-sync-wave-plan.md  feed_delivery.md  frontend-optimization-plan.md  node_availability_audit_handoff.md  reader_subscription_contract.md  review_stage1_runtime_role_boundary.md  review_stage2_collector_terminology_cleanup.md  review_stage3_archive_sync_contract.md  review_stage4_reader_subscription_layer.md  review_stage5_ui_deployment_polish.md  social-x-wave-plan.md  source_admission_workflow.md  source_archive_roadmap.md  source_catalog.md  source_curation_policy.md  x_twitter_ingestion_decision.md
frontend/: app.config.json  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
scripts/: README.md  compare_web_backends.py  ensure_daily_collection_job.py  export_shendeng_daily_news.py
src/: config.py  main.py  mcp_server.py  version.py
tests/: conftest.py  test_accounts.py  test_admin_audit.py  test_admin_ops.py  test_announcements.py  test_archive_sync.py  test_article_extractor.py  test_article_facets.py  test_background_jobs.py  test_collection_next_run.py  test_collection_run_job.py  test_configurable_web_fetcher.py  test_content_analytics.py  test_daily_brief.py  test_daily_brief_endpoints.py  test_deps.py  test_docker_requirements.py  test_ensure_daily_collection_job.py  test_feedback.py  test_fetch_batch_job.py  test_fetch_concurrency.py  test_fetch_failures.py  test_fetch_param_whitelist.py  test_fetcher_curation.py  test_fts_search.py  test_github_release_fetcher.py  test_index_status.py  test_ithome_web_fetcher.py  test_jobs.py  (+33 more)
(+257 files in other folders)
