[project]
name = "doramisourcearchive"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.15",
    "fastapi>=0.100.0",
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "lxml>=4.9.0",
    "mcp>=1.0.0",
    "playwright>=1.35.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.2",
    "sqlmodel>=0.0.8",
    "uvicorn>=0.23.0",
]
