[project]
name = "doramisourcearchive"
version = "3.19.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.15",
    "fastapi>=0.100.0",
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "lxml>=4.9.0",
    "mcp>=1.0.0",
    "playwright>=1.35.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.8",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
# 可选：基于 crawl4ai 的浏览器详情后端（统一 Web Content Runtime，阶段一旁路对比）。
# 默认 `uv sync` 不安装；启用浏览器后端时 `uv sync --extra crawl4ai` 并 `playwright install chromium`。
crawl4ai = [
    "crawl4ai>=0.9.0",
]
# 嵌入式 RAG:embedding/rerank 模型在后端进程内推理(torch/科学计算栈 ~1GB)。
# 默认镜像不装(WITH_RAG=0);单机全量形态 `--build-arg WITH_RAG=1` 或 dev
# `uv sync --extra rag-embedded`。远程形态(chroma server + TEI)不需要本 extra,
# 见 docs/deploy-docker.md 的 RAG 节。chromadb 客户端保留在核心依赖(轻,双模共用)。
rag-embedded = [
    "sentence-transformers>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
